--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Users\Digi-Key\Desktop\EEWiki\EEWiki\Code_Examples\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/11/2015
+C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
+Project File Date:  06/15/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -34,12 +34,13 @@ compiling I2C.c...
 compiling Retarget.c...
 compiling Serial.c...
 compiling Timing.c...
+compiling LPS25HB.c...
 compiling ADC_Test.c...
 compiling Gpio_Test.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=3760 RO-data=264 RW-data=68 ZI-data=1636  
+Program Size: Code=11416 RO-data=632 RW-data=156 ZI-data=1636  
 FromELF: creating hex file...
 ".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
@@ -58,7 +59,7 @@ Package Vendor: Keil
    * Component: Startup Version: 1.0.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Digi-Key\Desktop\EEWiki\EEWiki\Code_Examples\Intern_Project\RTE
+  C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.3.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32L0xx_DFP\1.3.0\Device\Include
 
