--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/15/2015
+Project File Date:  06/16/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -35,12 +35,13 @@ compiling Retarget.c...
 compiling Serial.c...
 compiling Timing.c...
 compiling LPS25HB.c...
+compiling LIS3MDL.c...
 compiling ADC_Test.c...
 compiling Gpio_Test.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=7644 RO-data=504 RW-data=176 ZI-data=1632  
+Program Size: Code=3932 RO-data=264 RW-data=164 ZI-data=1636  
 FromELF: creating hex file...
 ".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
