--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -36,14 +36,21 @@ compiling Serial.c...
 compiling Timing.c...
 compiling LPS25HB.c...
 compiling LIS3MDL.c...
+LIS3MDL.c(101): warning:  #940-D: missing return statement at end of non-void function "LIS2MDL_XYZ_Read"
+  }
+LIS3MDL.c: 1 warning, 0 errors
+compiling LSM6DS0.c...
+LSM6DS0.c(9): warning:  #940-D: missing return statement at end of non-void function "LSM6DS0_Init"
+  }
+LSM6DS0.c: 1 warning, 0 errors
 compiling ADC_Test.c...
 compiling Gpio_Test.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=3932 RO-data=264 RW-data=164 ZI-data=1636  
+Program Size: Code=4312 RO-data=264 RW-data=164 ZI-data=1636  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
