--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/16/2015
+Project File Date:  06/17/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -37,17 +37,15 @@ compiling Timing.c...
 compiling LPS25HB.c...
 compiling LIS3MDL.c...
 compiling LSM6DS0.c...
-LSM6DS0.c(9): warning:  #940-D: missing return statement at end of non-void function "LSM6DS0_Init"
-  }
-LSM6DS0.c: 1 warning, 0 errors
+compiling ISK01A1.c...
 compiling ADC_Test.c...
 compiling Gpio_Test.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=8332 RO-data=440 RW-data=196 ZI-data=1636  
+Program Size: Code=13136 RO-data=784 RW-data=200 ZI-data=1632  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
