--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/18/2015
+Project File Date:  06/19/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -38,10 +38,11 @@ compiling LPS25HB.c...
 compiling LIS3MDL.c...
 compiling LSM6DS0.c...
 compiling ISK01A1.c...
+compiling USART1.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=7044 RO-data=400 RW-data=48 ZI-data=1632  
+Program Size: Code=3688 RO-data=224 RW-data=48 ZI-data=1632  
 FromELF: creating hex file...
 ".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
