Parsed the RMC GPS data. Now I have t parse each RMC string.

--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -39,12 +39,19 @@ compiling LIS3MDL.c...
 compiling LSM6DS0.c...
 compiling ISK01A1.c...
 compiling USART1.c...
+USART1.c(226): warning:  #177-D: variable "mm" was declared but never referenced
+        char mm[3];
+USART1.c(227): warning:  #177-D: variable "ss" was declared but never referenced
+        char ss[3];
+USART1.c(228): warning:  #177-D: variable "sss" was declared but never referenced
+        char sss[4];
+USART1.c: 3 warnings, 0 errors
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=3848 RO-data=264 RW-data=1056 ZI-data=2272  
+Program Size: Code=4512 RO-data=304 RW-data=1056 ZI-data=2344  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
