Parsed the GPS data for ground speed, latitude and longitude, and converted UTC time to TRF.

--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/19/2015
+Project File Date:  06/24/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -38,20 +38,13 @@ compiling LPS25HB.c...
 compiling LIS3MDL.c...
 compiling LSM6DS0.c...
 compiling ISK01A1.c...
-compiling USART1.c...
-USART1.c(226): warning:  #177-D: variable "mm" was declared but never referenced
-        char mm[3];
-USART1.c(227): warning:  #177-D: variable "ss" was declared but never referenced
-        char ss[3];
-USART1.c(228): warning:  #177-D: variable "sss" was declared but never referenced
-        char sss[4];
-USART1.c: 3 warnings, 0 errors
+compiling FGPMMOPA6H.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=4512 RO-data=304 RW-data=1056 ZI-data=2344  
+Program Size: Code=12700 RO-data=720 RW-data=184 ZI-data=2384  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 3 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
