Everything is done!

--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  06/29/2015
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
 compiling Intern_Project.c...
+Intern_Project.c(32): warning:  #177-D: variable "Data" was declared but never referenced
+        char Data[165];
+Intern_Project.c: 1 warning, 0 errors
 compiling ADC.c...
 compiling GPIO.c...
 compiling HTS221.c...
@@ -43,9 +46,9 @@ compiling XBeePro24.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=13064 RO-data=608 RW-data=192 ZI-data=2600  
+Program Size: Code=13020 RO-data=604 RW-data=204 ZI-data=2804  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
