--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,11 +22,14 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  06/29/2015
+Project File Date:  08/04/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
 compiling Intern_Project.c...
+Intern_Project.c(41): warning:  #177-D: variable "Data" was declared but never referenced
+        char Data[256];
+Intern_Project.c: 1 warning, 0 errors
 compiling ADC.c...
 compiling GPIO.c...
 compiling HTS221.c...
@@ -40,12 +43,13 @@ compiling LSM6DS0.c...
 compiling ISK01A1.c...
 compiling FGPMMOPA6H.c...
 compiling XBeePro24.c...
+compiling PWM.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=24344 RO-data=1064 RW-data=208 ZI-data=2896  
+Program Size: Code=3608 RO-data=268 RW-data=172 ZI-data=2732  
 FromELF: creating hex file...
-".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\Intern_Project.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
