--- a/Intern_Project/Objects/Intern_Project.build_log.htm
+++ b/Intern_Project/Objects/Intern_Project.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Digi-Key\Documents\GitHub\STM32L053R8\Intern_Project\Intern_Project.uvprojx
-Project File Date:  08/04/2015
+Project File Date:  08/12/2015
 
 <h2>Output:</h2>
 Rebuild target 'STM32l053 Nucleo Board'
@@ -41,10 +41,11 @@ compiling ISK01A1.c...
 compiling FGPMMOPA6H.c...
 compiling XBeePro24.c...
 compiling PWM.c...
+compiling Timer2.c...
 assembling startup_stm32l053xx.s...
 compiling system_stm32l0xx.c...
 linking...
-Program Size: Code=24624 RO-data=1064 RW-data=208 ZI-data=2896  
+Program Size: Code=24668 RO-data=1060 RW-data=220 ZI-data=2900  
 FromELF: creating hex file...
 ".\Objects\Intern_Project.axf" - 0 Error(s), 0 Warning(s).
 
